log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:50:55 AM UTC: 
 tests:  0|6
total_score: 0/70
a25a403
Thu 30 Mar 2023 04:00:06 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:40: error: expected expression before ‘ArrayList’
   14 |   ArrayList *list= (ArrayList*) malloc(ArrayList);
      |                                        ^~~~~~~~~
arraylist.c:14:14: error: unused variable ‘list’ [-Werror=unused-variable]
   14 |   ArrayList *list= (ArrayList*) malloc(ArrayList);
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
ed9fcda
Thu 30 Mar 2023 04:00:52 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘list’ [-Werror=unused-variable]
   14 |   ArrayList *list= (ArrayList*) malloc(sizeof(ArrayList));
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
0527688
Thu 30 Mar 2023 04:01:33 AM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   15 |   if( list == NULL)
      |   ^~
arraylist.c:18:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   18 |     return NULL;
      |     ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a521df0
